@@ -1,3 +1,8 @@
+2002-10-03  Hideyuki SHIRAI  <shirai@quickhack.net>
+
+	* emacs/mhc-calendar.el (mhc-calendar-count-days-region): Display
+	number of weeks. Thanks to Mr. KOIE Hidetaka.
+
 2002-10-03  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>
 
 	* icons/Vacation.xpm: Correct invalid data.
